k8s/identity-system/traefik-forward-auth/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: identity-system
spec:
  forwardAuth:
    address: http://traefik-forward-auth.identity-system.svc.cluster.local:4181
    authResponseHeaders:
      - X-Forwarded-User
