k8s/identity-system/traefik-forward-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: identity-system
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: thomseddon/traefik-forward-auth:2
        name: traefik-forward-auth
        ports:
        - containerPort: 4181
          name: http
          protocol: TCP
        #livenessProbe:
        #  httpGet:
        #    path: /
        #    port: 4181
        #  initialDelaySeconds: 20
        #  periodSeconds: 5
        #readinessProbe:
        #  httpGet:
        #    path: /
        #    port: 4181
        #  initialDelaySeconds: 20
        #  periodSeconds: 5
        volumeMounts:
        - name: configs
          mountPath: /config
          subPath: traefik-forward-auth.ini
        # Inject local CA cert into the trust store
        #- name: tls
        #  mountPath: /etc/ssl/certs/dex.crt
        #  subPath: ca.crt
      volumes:
      - name: configs
        configMap:
          name: config
      #- name: tls
      #  secret:
      #    secretName: forward-auth-tls
